IGNITE-27088 BinaryWriter should use internal String#value